--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/vasco3/mminch-64/issues"
   },
   "homepage": "https://github.com/vasco3/mminch-64#readme",
-  "tonicExampleFilename": "./example.js",
+  "tonicExampleFilename": "example.js",
   "devDependencies": {
     "eslint": "^2.12.0"
   }
